cmake_minimum_required(VERSION 3.10)

MACRO(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child})
      LIST(APPEND dirlist ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
ENDMACRO()

SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})
list(REMOVE_ITEM SUBDIRS SPlisHSPlasH)

FOREACH(subdir ${SUBDIRS})
  add_subdirectory(${subdir})
ENDFOREACH()

include(ExternalProject)

ExternalProject_Add(
  SPlisHSPlasH
  PREFIX ${CMAKE_BINARY_DIR}/Examples/SPlisHSPlasH
  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/SPlisHSPlasH
  BINARY_DIR ${CMAKE_BINARY_DIR}/Examples

  CMAKE_ARGS -DPYBIND11_FINDPYTHON=ON -DPYBIND11_INSTALL=ON -DUSE_AVX=OFF -DUSE_DEBUG_TOOLS=OFF 
            -DUSE_DOUBLE_PRECISION=OFF -DUSE_GPU_NEIGHBORHOOD_SEARCH=ON -DUSE_IMGUI=ON -DUSE_MSVC_RUNTIME_LIBRARY_DLL=ON
            -DUSE_OpenMP=ON -DUSE_PYTHON_BINDINGS=ON -DUSE_PYTHON_INCLUDE_DIR=OFF -DUSE_THIRD_PARTY_METHODS=OFF
            -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}/install
)

